lib/src/generated/flutter_pty_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: constant_identifier_names
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_element
// ignore_for_file: unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for the clean-slate flutter_pty2 ABI.
///
class FlutterPtyBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterPtyBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterPtyBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int pty_session_start(
    ffi.Pointer<PtySpawnOptions> options,
    ffi.Pointer<ffi.Pointer<PtySession>> out_session,
    ffi.Pointer<PtyError> out_error,
  ) {
    return _pty_session_start(
      options,
      out_session,
      out_error,
    );
  }

  late final _pty_session_startPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<PtySpawnOptions>,
              ffi.Pointer<ffi.Pointer<PtySession>>,
              ffi.Pointer<PtyError>)>>('pty_session_start');
  late final _pty_session_start = _pty_session_startPtr.asFunction<
      int Function(ffi.Pointer<PtySpawnOptions>,
          ffi.Pointer<ffi.Pointer<PtySession>>, ffi.Pointer<PtyError>)>();

  int pty_session_pid(
    ffi.Pointer<PtySession> session,
  ) {
    return _pty_session_pid(
      session,
    );
  }

  late final _pty_session_pidPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<PtySession>)>>(
          'pty_session_pid');
  late final _pty_session_pid =
      _pty_session_pidPtr.asFunction<int Function(ffi.Pointer<PtySession>)>();

  int pty_session_try_write(
    ffi.Pointer<PtySession> session,
    int request_id,
    ffi.Pointer<ffi.Uint8> bytes,
    int length,
    ffi.Pointer<PtyError> out_error,
  ) {
    return _pty_session_try_write(
      session,
      request_id,
      bytes,
      length,
      out_error,
    );
  }

  late final _pty_session_try_writePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<PtySession>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64,
              ffi.Pointer<PtyError>)>>('pty_session_try_write');
  late final _pty_session_try_write = _pty_session_try_writePtr.asFunction<
      int Function(ffi.Pointer<PtySession>, int, ffi.Pointer<ffi.Uint8>, int,
          ffi.Pointer<PtyError>)>();

  void pty_session_ack_output(
    ffi.Pointer<PtySession> session,
    int byte_count,
  ) {
    return _pty_session_ack_output(
      session,
      byte_count,
    );
  }

  late final _pty_session_ack_outputPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<PtySession>, ffi.Uint64)>>('pty_session_ack_output');
  late final _pty_session_ack_output = _pty_session_ack_outputPtr
      .asFunction<void Function(ffi.Pointer<PtySession>, int)>();

  int pty_session_resize(
    ffi.Pointer<PtySession> session,
    PtySize size,
    ffi.Pointer<PtyError> out_error,
  ) {
    return _pty_session_resize(
      session,
      size,
      out_error,
    );
  }

  late final _pty_session_resizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<PtySession>, PtySize,
              ffi.Pointer<PtyError>)>>('pty_session_resize');
  late final _pty_session_resize = _pty_session_resizePtr.asFunction<
      int Function(ffi.Pointer<PtySession>, PtySize, ffi.Pointer<PtyError>)>();

  int pty_session_kill(
    ffi.Pointer<PtySession> session,
    ffi.Pointer<PtyError> out_error,
  ) {
    return _pty_session_kill(
      session,
      out_error,
    );
  }

  late final _pty_session_killPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<PtySession>,
              ffi.Pointer<PtyError>)>>('pty_session_kill');
  late final _pty_session_kill = _pty_session_killPtr.asFunction<
      int Function(ffi.Pointer<PtySession>, ffi.Pointer<PtyError>)>();

  int pty_session_send_signal(
    ffi.Pointer<PtySession> session,
    int signal_number,
    int target,
    ffi.Pointer<PtyError> out_error,
  ) {
    return _pty_session_send_signal(
      session,
      signal_number,
      target,
      out_error,
    );
  }

  late final _pty_session_send_signalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<PtySession>, ffi.Int32, ffi.Int32,
              ffi.Pointer<PtyError>)>>('pty_session_send_signal');
  late final _pty_session_send_signal = _pty_session_send_signalPtr.asFunction<
      int Function(ffi.Pointer<PtySession>, int, int, ffi.Pointer<PtyError>)>();

  void pty_session_discard_output(
    ffi.Pointer<PtySession> session,
  ) {
    return _pty_session_discard_output(
      session,
    );
  }

  late final _pty_session_discard_outputPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PtySession>)>>(
          'pty_session_discard_output');
  late final _pty_session_discard_output = _pty_session_discard_outputPtr
      .asFunction<void Function(ffi.Pointer<PtySession>)>();

  void pty_session_begin_close(
    ffi.Pointer<PtySession> session,
  ) {
    return _pty_session_begin_close(
      session,
    );
  }

  late final _pty_session_begin_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PtySession>)>>(
          'pty_session_begin_close');
  late final _pty_session_begin_close = _pty_session_begin_closePtr
      .asFunction<void Function(ffi.Pointer<PtySession>)>();

  void pty_session_release(
    ffi.Pointer<PtySession> session,
  ) {
    return _pty_session_release(
      session,
    );
  }

  late final _pty_session_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PtySession>)>>(
          'pty_session_release');
  late final _pty_session_release = _pty_session_releasePtr
      .asFunction<void Function(ffi.Pointer<PtySession>)>();

  void pty_session_abandon(
    ffi.Pointer<ffi.Void> session,
  ) {
    return _pty_session_abandon(
      session,
    );
  }

  late final _pty_session_abandonPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'pty_session_abandon');
  late final _pty_session_abandon = _pty_session_abandonPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void pty_debug_get_stats(
    ffi.Pointer<PtyDebugStats> out_stats,
  ) {
    return _pty_debug_get_stats(
      out_stats,
    );
  }

  late final _pty_debug_get_statsPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PtyDebugStats>)>>(
      'pty_debug_get_stats');
  late final _pty_debug_get_stats = _pty_debug_get_statsPtr
      .asFunction<void Function(ffi.Pointer<PtyDebugStats>)>();

  int Dart_InitializeApiDL(
    ffi.Pointer<ffi.Void> data,
  ) {
    return _Dart_InitializeApiDL(
      data,
    );
  }

  late final _Dart_InitializeApiDLPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'Dart_InitializeApiDL');
  late final _Dart_InitializeApiDL = _Dart_InitializeApiDLPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>)>();
}

/// mbstate_t is an opaque object to keep conversion state, during multibyte
/// stream conversions.  The content must not be referenced by user programs.
final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  /// for alignment
  @ffi.LongLong()
  external int _mbstateL;
}

final class __darwin_pthread_handler_rec extends ffi.Struct {
  /// Routine to call
  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      __routine;

  /// Argument to pass
  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

final class PtySession extends ffi.Opaque {}

abstract class PtyErrorDomain {
  static const int PTY_ERROR_DOMAIN_NONE = 0;
  static const int PTY_ERROR_DOMAIN_POSIX = 1;
  static const int PTY_ERROR_DOMAIN_WIN32 = 2;
  static const int PTY_ERROR_DOMAIN_HRESULT = 3;
  static const int PTY_ERROR_DOMAIN_INTERNAL = 4;
}

abstract class PtyErrorKind {
  static const int PTY_ERROR_NONE = 0;
  static const int PTY_ERROR_INVALID_ARGUMENT = 1;
  static const int PTY_ERROR_NOT_FOUND = 2;
  static const int PTY_ERROR_PERMISSION_DENIED = 3;
  static const int PTY_ERROR_SPAWN_FAILED = 4;
  static const int PTY_ERROR_WORKING_DIRECTORY = 5;
  static const int PTY_ERROR_IO = 6;
  static const int PTY_ERROR_CLOSED = 7;
  static const int PTY_ERROR_UNSUPPORTED = 8;
  static const int PTY_ERROR_OUT_OF_MEMORY = 9;
  static const int PTY_ERROR_INTERNAL = 10;
}

final class PtyError extends ffi.Struct {
  @ffi.Int32()
  external int domain;

  @ffi.Int32()
  external int kind;

  @ffi.Int64()
  external int os_code;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> message;
}

/// Test/debug diagnostics; not part of the public Dart API.
final class PtyDebugStats extends ffi.Struct {
  @ffi.Uint64()
  external int live_sessions;

  @ffi.Uint64()
  external int live_read_workers;

  @ffi.Uint64()
  external int live_write_workers;

  @ffi.Uint64()
  external int live_wait_workers;

  @ffi.Uint64()
  external int live_close_workers;

  @ffi.Uint64()
  external int pending_write_chunks;

  @ffi.Uint64()
  external int pending_write_bytes;
}

final class PtySize extends ffi.Struct {
  @ffi.Int32()
  external int rows;

  @ffi.Int32()
  external int columns;

  @ffi.Int32()
  external int pixel_width;

  @ffi.Int32()
  external int pixel_height;
}

final class PtySpawnOptions extends ffi.Struct {
  external ffi.Pointer<ffi.Char> executable;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> arguments;

  @ffi.Int32()
  external int argument_count;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> environment;

  @ffi.Int32()
  external int environment_count;

  external ffi.Pointer<ffi.Char> working_directory;

  external PtySize size;

  @ffi.Uint64()
  external int input_buffer_bytes;

  @ffi.Uint64()
  external int output_window_bytes;

  @ffi.Int64()
  external int event_port;
}

abstract class PtyTryWriteResult {
  static const int PTY_WRITE_ACCEPTED = 0;
  static const int PTY_WRITE_BACKPRESSURED = 1;
  static const int PTY_WRITE_CLOSED = 2;
  static const int PTY_WRITE_ERROR = 3;
}

abstract class PtyCapability {
  static const int PTY_CAPABILITY_POSIX_SIGNALS = 1;
  static const int PTY_CAPABILITY_FOREGROUND_PROCESS_GROUPS = 2;
  static const int PTY_CAPABILITY_PIXEL_DIMENSIONS = 4;
  static const int PTY_CAPABILITY_RELIABLE_PROCESS_TREE_KILL = 8;
  static const int PTY_CAPABILITY_CONPTY = 16;
}

abstract class PtyEventType {
  static const int PTY_EVENT_SPAWNED = 1;
  static const int PTY_EVENT_SPAWN_FAILED = 2;
  static const int PTY_EVENT_OUTPUT = 3;
  static const int PTY_EVENT_OUTPUT_CLOSED = 4;
  static const int PTY_EVENT_WRITE_COMPLETE = 5;
  static const int PTY_EVENT_WRITABLE = 6;
  static const int PTY_EVENT_INPUT_CLOSED = 7;
  static const int PTY_EVENT_PROCESS_EXIT = 8;
  static const int PTY_EVENT_ASYNC_ERROR = 9;
  static const int PTY_EVENT_SESSION_CLOSED = 10;
}

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __has_bounds_safety_attributes = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int __DARWIN_WCHAR_MAX = 2147483647;

const int __DARWIN_WCHAR_MIN = -2147483648;

const int __DARWIN_WEOF = -1;

const int _FORTIFY_SOURCE = 2;

const int NULL = 0;

const int USER_ADDR_NULL = 0;

const int __WORDSIZE = 64;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;
